# exoplings

./: .env.example  .gitignore  .railwayignore  CHANGELOG.md  CONTRIBUTING.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
data_csv/: kepler.csv  tess.csv
sample_data/: Test_Transit_Planet_411839167.csv  WASP-18_TESS_transit_window.csv  light_curves.csv
src/exoplings/: PlanetDetailExtractor.py  app.py  data_processing.py  plot_processing.py  routes.py  utils.py
src/exoplings/models/: network.py  simulator.py
src/exoplings/models/networks/: MultiDim.py  OneDim.py
src/exoplings/templates/: about.html  base.html  index.html  model.html  visualize.html
src/spaceapps_2025/: app.py  data_processing.py  plot_processing.py  routes.py
src/spaceapps_2025/templates/: about.html  base.html  index.html  visualize.html
